--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,13 @@
 
 
   @theme {
-    --color-brown: #53423e;
+    --breakpoint-sm: 350px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 1024px;
+    --breakpoint-xl: 1280px;
+    --breakpoint-2xl: 1536px;
+ 
+  --color-brown: #53423e;
   --color-lightBrown: #645550;
   --color-darkBrown: #2c2523;
   --color-black: #1e1917;
@@ -20,9 +26,8 @@
   --color-darkGrey: #3f4441;
   --font-body: "Josefin Sans", "sans-serif"; 
   --font-special: "Nunito", "sans-serif"; 
+  --shadow-cyanShadow: 0px 0px 20px 0px rgba(94,206,220,0.5);
   }
-  
-
 
 
 body {
