complete hero section

--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,11 @@
   --color-grey: #626965;
   --color-lightGrey: #978580;
   --color-darkGrey: #3f4441;
-  --font-body: "Josefin Sans", "sans-serif"; 
-  --font-special: "Nunito", "sans-serif"; 
+  --font-body: Josefin Sans, sans-serif; 
+  --font-special: Nunito, sans-serif; 
   --shadow-cyanShadow: 0px 0px 20px 0px rgba(94,206,220,0.5);
+  --shadow-cyanMediumShadow: 10px 10px 200px 150px rgba(94,286,220,0.5);
+  --shadow-orangeMediumShadow: 10px 10px 200px 150px rgba(240,169,79,0.5);
   }
 
 
